--- a/main.css
+++ b/main.css
@@ -1,11 +1,17 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
+@import url("fonts/inter/inter.css");
+@import url("fonts/pingfang/pingfang.css");
 
 body {
-    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
 }
 
 body:lang(zh-CN) {
-    font-family: "SF Pro SC", "SF Pro Text", "SF Pro Icons", "PingFang SC", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro SC", "SF Pro Text", "PingFang SC", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
+}
+
+body:lang(zh-TW) {
+    font-family: -apple-system, BlinkMacSystemFont, "SF Pro TC", "SF Pro Text", "PingFang TC", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
 }
 
 [data-theme="light"] {
