--- a/main.css
+++ b/main.css
@@ -1,24 +1,24 @@
-/* @import "tailwindcss"; */
+@import "tailwindcss";
 @import url("fonts/inter/inter.css");
 @import url("fonts/pingfang/pingfang.css");
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
+    font-family: "SF Pro Text", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
 }
 
 body:lang(zh-CN) {
-    font-family: -apple-system, BlinkMacSystemFont, "SF Pro SC", "SF Pro Text", "PingFang SC", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
+    font-family: "SF Pro SC", "SF Pro Text", "PingFang SC", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
 }
 
 body:lang(zh-TW) {
-    font-family: -apple-system, BlinkMacSystemFont, "SF Pro TC", "SF Pro Text", "PingFang TC", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
+    font-family: "SF Pro TC", "SF Pro Text", "PingFang TC", "Helvetica Neue", Helvetica, "Inter", Arial, sans-serif;
 }
 
 [data-theme="light"] {
     --color-gray-50: #000000;
     --color-gray-600: #1d1d1f;
-    --color-gray-700: #CCCCC7;
-    --color-gray-800: #f5f5f7;
+    --color-gray-700: #ccccc7;
+    --color-gray-800: #86868b;
     --color-gray-900: #f5f5f7;
     --color-gray-950: #ffffff;
     --color-blue-500: #2997ff;
@@ -28,14 +28,18 @@ body:lang(zh-TW) {
     --color-header: rgba(250, 250, 252, 0.8);
     --color-header-border: rgba(0, 0, 0, 0.24);
     --color-header-border-active: rgba(0, 0, 0, 0.76);
+    --color-hover: var(--color-gray-50);
+    --color-footer-text: #424245;
+    --color-footer: var(--color-footer-text);
+    --color-link: #0070c9;
 }
 
 @media (prefers-color-scheme: light) {
     :root {
         --color-gray-50: #000000;
         --color-gray-600: #1d1d1f;
-        --color-gray-700: #CCCCC7;
-        --color-gray-800: #f5f5f7;
+        --color-gray-700: #ccccc7;
+        --color-gray-800: #86868b;
         --color-gray-900: #f5f5f7;
         --color-gray-950: #ffffff;
         --color-blue-500: #2997ff;
@@ -45,13 +49,17 @@ body:lang(zh-TW) {
         --color-header: rgba(250, 250, 252, 0.8);
         --color-header-border: rgba(0, 0, 0, 0.24);
         --color-header-border-active: rgba(0, 0, 0, 0.76);
+        --color-hover: var(--color-gray-50);
+        --color-footer-text: #424245;
+        --color-footer: var(--color-footer-text);
+        --color-link: #0070c9;
     }
 
     [data-theme="dark"] {
         --color-gray-50: #f5f5f7;
-        --color-gray-600: #86868b;
+        --color-gray-600: #1d1d1f;
         --color-gray-700: #333338;
-        --color-gray-800: #1d1d1f;
+        --color-gray-800: #86868b;
         --color-gray-900: #141414;
         --color-gray-950: #000000;
         --color-blue-500: #2997ff;
@@ -61,15 +69,19 @@ body:lang(zh-TW) {
         --color-header: rgba(22, 22, 23, 0.8);
         --color-header-border: rgba(255, 255, 255, 0.24);
         --color-header-border-active: rgba(255, 255, 255, 0.76);
+        --color-hover: var(--color-blue-500);
+        --color-footer-text: #d2d2d7;
+        --color-footer: var(--color-footer-text);
+        --color-link: #0070c9;
     }
 }
 
 @media (prefers-color-scheme: dark) {
     [data-theme="dark"] {
         --color-gray-50: #f5f5f7;
-        --color-gray-600: #86868b;
+        --color-gray-600: #1d1d1f;
         --color-gray-700: #333338;
-        --color-gray-800: #1d1d1f;
+        --color-gray-800: #86868b;
         --color-gray-900: #141414;
         --color-gray-950: #000000;
         --color-blue-500: #2997ff;
@@ -79,5 +91,21 @@ body:lang(zh-TW) {
         --color-header: rgba(22, 22, 23, 0.8);
         --color-header-border: rgba(255, 255, 255, 0.24);
         --color-header-border-active: rgba(255, 255, 255, 0.76);
+        --color-hover: var(--color-blue-500);
+        --color-footer-text: #d2d2d7;
+        --color-footer: var(--color-footer-text);
+        --color-link: #0070c9;
     }
+}
+
+#languageSelector {
+    direction: rtl;
+}
+
+#support-toggle:checked+.support h3::after {
+    transform: rotate(45deg);
+}
+
+#community-toggle:checked+.community h3::after {
+    transform: rotate(45deg);
 }
